--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Sleeptimer">
+            android:theme="@style/Theme.Sleeptimer.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
