feat(timer): Clear timer on BOOT_COMPLETED

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:name="android.permission.USE_EXACT_ALARM"
         tools:ignore="ExactAlarmPolicy" />
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:name=".SleepTimerApplication"
         android:allowBackup="true"
@@ -49,6 +51,14 @@
             android:exported="false">
             <intent-filter>
                 <action android:name="io.github.pndhd1.sleeptimer.ACTION_TIMER_EXPIRED" />
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".data.receiver.BootCompletedReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
     </application>
