feat(timer, settings): Implement "Show Notification" setting, move service to the UI layer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
         </receiver>
 
         <service
-            android:name=".data.service.TimerService"
+            android:name=".ui.services.TimerNotificationService"
             android:exported="false"
             android:foregroundServiceType="systemExempted" />
     </application>
