--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SYSTEM_EXEMPTED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
 
     <uses-permission
         android:name="android.permission.SCHEDULE_EXACT_ALARM"
@@ -57,6 +58,7 @@
             android:exported="false">
             <intent-filter>
                 <action android:name="io.github.pndhd1.sleeptimer.ACTION_TIMER_EXPIRED" />
+                <action android:name="io.github.pndhd1.sleeptimer.ACTION_FADE_START" />
             </intent-filter>
         </receiver>
 
@@ -72,6 +74,11 @@
             android:name=".ui.services.TimerNotificationService"
             android:exported="false"
             android:foregroundServiceType="systemExempted" />
+
+        <service
+            android:name=".data.service.AudioFadeService"
+            android:exported="false"
+            android:foregroundServiceType="mediaPlayback" />
     </application>
 
 </manifest>
