--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ serialization = "1.9.0"
 splashscreen = "1.2.0"
 datastore = "1.2.0"
 metro = "0.9.2"
+flowext = "1.0.0"
 
 [libraries]
 kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
@@ -32,6 +33,7 @@ decompose-extensions-compose = { group = "com.arkivanov.decompose", name = "exte
 essenty-lifecycle-coroutines = { group = "com.arkivanov.essenty", name = "lifecycle-coroutines", version.ref = "essenty" }
 kotlin-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "serialization" }
 kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
+flowext = { module = "io.github.hoc081098:FlowExt-jvm", version.ref = "flowext" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
