refactor(ui): Extract OpenSettingsDialog and add launchCatching
- Add launchCatching extension for ActivityResultLauncher with onError callback
- Create reusable OpenSettingsDialog widget with resolveActivity check
- Update PermissionContent to handle missing activities gracefully
- Add queries declaration to manifest for package visibility

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
         android:name="android.permission.FOREGROUND_SERVICE"
         tools:ignore="ForegroundServicesPolicy" />
 
+    <queries>
+        <intent>
+            <action android:name="android.settings.APPLICATION_DETAILS_SETTINGS" />
+            <data android:scheme="package" />
+        </intent>
+    </queries>
+
     <application
         android:name=".SleepTimerApplication"
         android:allowBackup="true"
