feat(analytics): Add Firebase Crashlytics integration
- Add Firebase BOM and Crashlytics dependencies
- Configure Crashlytics plugin for release builds
- Disable Crashlytics for debug builds
- Report exceptions to Crashlytics on error screens

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,9 @@
 agp = "8.13.2"
 kotlin = "2.3.0"
 aboutlibraries = "13.2.1"
+firebaseBom = "34.8.0"
+googleServices = "4.4.4"
+firebaseCrashlytics = "3.0.6"
 coreKtx = "1.17.0"
 lifecycle = "2.10.0"
 activityCompose = "1.12.2"
@@ -37,6 +40,8 @@ kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializat
 flowext = { module = "io.github.hoc081098:FlowExt-jvm", version.ref = "flowext" }
 aboutlibraries-core = { module = "com.mikepenz:aboutlibraries-core", version.ref = "aboutlibraries" }
 aboutlibraries-compose-m3 = { module = "com.mikepenz:aboutlibraries-compose-m3", version.ref = "aboutlibraries" }
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
+firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -45,4 +50,6 @@ kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "ko
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 metro = { id = "dev.zacsweers.metro", version.ref = "metro" }
 aboutlibraries = { id = "com.mikepenz.aboutlibraries.plugin.android", version.ref = "aboutlibraries" }
+google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
+firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlytics" }
 
