--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ activityCompose = "1.12.2"
 composeBom = "2026.01.00"
 decompose = "3.4.0"
 essenty = "2.5.0"
+yandexMobileads = "7.18.1"
 serialization = "1.9.0"
 splashscreen = "1.2.0"
 datastore = "1.2.0"
@@ -42,6 +43,7 @@ aboutlibraries-core = { module = "com.mikepenz:aboutlibraries-core", version.ref
 aboutlibraries-compose-m3 = { module = "com.mikepenz:aboutlibraries-compose-m3", version.ref = "aboutlibraries" }
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
 firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics" }
+yandex-mobileads = { module = "com.yandex.android:mobileads", version.ref = "yandexMobileads" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
