--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,11 @@
             android:name=".data.service.AudioFadeService"
             android:exported="false"
             android:foregroundServiceType="mediaPlayback" />
+
+        <!-- Disable automatic Yandex sdk initialization -->
+        <meta-data
+            android:name="com.yandex.mobile.ads.AUTOMATIC_SDK_INITIALIZATION"
+            android:value="false" />
     </application>
 
 </manifest>
