feat(settings): Add go home on expire with full-screen intent permission
- Add GoHomeActivity to navigate to home screen after lock
- Add full-screen intent permission check and settings flow
- Add notification channel settings dialog with resolveActivity fallback
- Add Actions notification channel for full-screen intent notifications
- Update SettingsContent with permission request UI and dialogs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:name="android.permission.FOREGROUND_SERVICE"
         tools:ignore="ForegroundServicesPolicy" />
 
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT"
+        tools:ignore="FullScreenIntentPolicy" />
+
     <queries>
         <intent>
             <action android:name="android.settings.APPLICATION_DETAILS_SETTINGS" />
@@ -44,10 +47,16 @@
             android:theme="@style/Theme.Sleeptimer.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".data.activity.GoHomeActivity"
+            android:excludeFromRecents="true"
+            android:exported="false"
+            android:noHistory="true"
+            android:theme="@android:style/Theme.NoDisplay" />
 
         <receiver
             android:name=".data.receiver.DeviceAdminReceiverImpl"
